<resources>
    <string name="app_name">ShopPal</string>
    <string name="login_text">Login</string>
    <string name="app_logo_description">App logo</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password_text">Forgot password</string>
    <string name="register_text">Register</string>
    <string name="shop_pal_text">Shop Pal</string>
    <string name="register_name_hint">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="agree_all_conditions_text">I agree to all <u>terms and conditions</u></string>
    <string name="no_account_text">Don\'t have an account</string>
    <string name="create_account">Create Your Account</string>
    <string name="have_account_text">Already have an account?</string>
    <string name="forgot_password_question_text">Forgot Password?</string>
    <string name="forgot_information">If you forget password, enter your email to reset password</string>
    <string name="submit_text">Submit</string>
    <string name="enter_complete_details_text">Enter complete details</string>
    <string name="person_image_description">User Profile Image</string>
    <string name="enter_phone_hint">Phone Number</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_shop">Shop</string>
    <string name="title_cart">Cart</string>
    <string name="title_orders">Orders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_text">Settings</string>
    <string name="title_activity_profile_session">ProfileSessionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout_text">Logout</string>
    <string name="edit_text">Edit Details</string>
    <string name="shopping_image_text">Shopping image</string>
    <string name="add_to_cart_text">ADD TO CART</string>
    <string name="buy_text">Buy</string>
    <string name="sample_description_text">sdfkljssssssfjsdlkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkksdfs</string>
    <string name="shopping_item_image_description">Shopping Item Image</string>
    <string name="text_item_name_sample">Item Name</string>
    <string name="text_item_price_sample">price</string>
    <string name="subtotal_text">Subtotal</string>
    <string name="charge_text">Shipping Charge</string>
    <string name="total_text">Total Amount</string>
    <string name="checkout_text">Checkout</string>
    <string name="card_details_text">Card Details</string>
    <string name="shopping_item_description">Cart Item Imageview</string>
    <string name="delete_description">Delete Cart Button</string>
    <string name="default_count">1</string>
    <string name="plus_description">Plus Button</string>
    <string name="minus_description">Minus Button</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="go_to_cart_string">GO TO CART</string>
    <string name="select_address_text">Select Address</string>
    <string name="add_address_text">ADD ADDRESS</string>
    <string name="address_text">Add Address</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="full_name_hint">Full Name</string>
    <string name="address_hint">Address</string>
    <string name="postal_hint">PIN Code</string>
    <string name="additional_details_hint">Additional Details</string>
    <string name="home_text">HOME</string>
    <string name="office_text">OFFICE</string>
    <string name="other_text">OTHER</string>
    <string name="other_details_text">Other Details</string>
    <string name="text_product_items">Product Items</string>
    <string name="text_selected_address">Selected Address</string>
    <string name="text_items_receipt">Items Receipt</string>
    <string name="text_payment_mode">Payment Mode</string>
    <string name="text_cod">Cash On Delivery</string>
    <string name="text_place_order">Place Order</string>
    <string name="order_id">Order ID</string>
    <string name="text_order_date">Order Date</string>
    <string name="text_order_status">Order Status</string>
    <string name="text_order_details">Order Details</string>
    <string name="search_content_description">Search Image</string>
    <string name="type_something_hint">Type Something</string>
</resources>