<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.shoppal.fragments.ShoppingItemsFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shopping_items" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.shoppal.fragments.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.shoppal.fragments.NotificationsFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_notifications" />
</navigation>