<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddAddressActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/add_address_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_activity_add_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_color"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_text"
                android:textColor="@color/white"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_address_full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_text"
            app:boxStrokeWidth="@dimen/input_stroke_width"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_activity_add_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_address_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/full_name_hint"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_address_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_text"
            app:boxStrokeWidth="@dimen/input_stroke_width"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_address_full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_address_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_phone_hint"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_address_details"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="@dimen/margin_text"
            app:boxStrokeWidth="@dimen/input_stroke_width"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_address_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_address_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/address_hint"
                android:inputType="textPostalAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_postal_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_text"
            app:boxStrokeWidth="@dimen/input_stroke_width"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_address_details">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_postal_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/postal_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_additional_details"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_text"
            app:boxStrokeWidth="@dimen/input_stroke_width"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_postal_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_additional_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/additional_details_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group_address_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_layout"
            android:checkedButton="@id/btn_home"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_additional_details">

            <RadioButton
                android:id="@+id/btn_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/radio_button_margin"
                android:layout_weight="1"
                android:background="@drawable/btn_selector_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/home_text"
                android:textColor="@drawable/btn_selector_text_color"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/btn_office"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/radio_button_margin"
                android:layout_weight="1"
                android:background="@drawable/btn_selector_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/office_text"
                android:textColor="@drawable/btn_selector_text_color"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/btn_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/radio_button_margin"
                android:layout_weight="1"
                android:background="@drawable/btn_selector_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/other_text"
                android:textColor="@drawable/btn_selector_text_color"
                android:textStyle="bold" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_other_details"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_text"
            android:visibility="gone"
            app:boxStrokeWidth="@dimen/input_stroke_width"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group_address_type">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_other_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/other_details_text"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/btn_address_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_layout"
            android:background="@drawable/btn_background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_other_details">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_layout"
                android:layout_weight="1"
                android:text="@string/submit_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>